# claude-fb-loops

./: .gitignore  .gitleaks.toml  .ruff.toml  GAPS.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  STRATEGY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  cowork-edge.md  desktop-chat-demo.md  ide-edge.md  ide-human-checks-RUNBOOK.md  request-id-anchor.md  request-id-live.json  server-side-reference.md  verification.md
fb-assist/: INTEGRATION.md  README.md  RUNTIME.md  pyproject.toml
fb-assist/examples/: demo.py
fb-assist/fb_assist/: __init__.py  claude_repro.py  cowork.py  desktop_chat.py  genericize.py  locate.py  mcp_server.py  package.py  pipeline.py  profile.py  redact.py  reference_intake.py  reputation.py  server_side.py  transcripts.py  watcher.py
fb-assist/prompts/: co-author.md
fb-assist/scripts/: install.py  verify_request_id.py
fb-assist/skill/fb/: SKILL.md
fb-assist/tests/: conftest.py  test_claude_repro.py  test_cowork.py  test_desktop_chat.py  test_genericize.py  test_integration.py  test_locate.py  test_mcp.py  test_package.py  test_pipeline.py  test_profile.py  test_redact.py  test_reference_intake.py  test_reputation.py  test_server_side.py  test_skill_assets.py  test_transcripts.py  test_watcher.py
fb-assist/tests/fixtures/: cowork-audit.jsonl  gen_cowork_fixture.py  generate_fixtures.py  sample-export.json  sample-feedback-conversation.json  sample-small.jsonl
fb-assist/voice/: README.md  dictate.sh  quick-panel.sh  summon.sh  transcribe.py
fb-os/: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
fb-os/dashboards/metabase/: docker-compose.yml
fb-os/fb_os/: __init__.py  cli.py  cluster.py  embed.py  fixtures.py  ingest.py  metrics.py  questions.py  store.py  triager.py
fb-os/fb_os/prompts/: triager.md
fb-os/fb_os/schema/: artifact.schema.json  open-questions.schema.json
fb-os/fixtures/: triager-replay.json
fb-os/tests/: test_cluster.py  test_ingest.py  test_metrics.py  test_questions.py  test_seam.py  test_triager.py
pps-pipeline/: Makefile  README.md  pyproject.toml
pps-pipeline/fixtures/session-demo/: captions.jsonl  manifest.json  network.har  session.jsonl  transcript.jsonl
pps-pipeline/pps_pipeline/: __init__.py  _schema_util.py  assess.py  bundle.py  caption.py  chunk.py  cli.py  fixture.py  interleave.py  redact_pass.py  transcribe.py
pps-pipeline/pps_pipeline/capture/: __init__.py  ccode_jsonl.py  mitm_har.py  obs_wfrecorder.sh
pps-pipeline/pps_pipeline/prompts/: assessor.md
pps-pipeline/pps_pipeline/prompts/mock/: assessor_response.json
pps-pipeline/pps_pipeline/schema/: assessment.schema.json  bundle.schema.json  package.schema.json
pps-pipeline/tests/: conftest.py  test_assess.py  test_bundle.py  test_chunk.py  test_cli_demo.py  test_edge.py  test_interleave.py  test_redact_pass.py
scripts/: scrub_gate.py
skill/fb/: SKILL.md
