[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pps-pipeline"
version = "0.1.0"
description = "PPS work-observation interview pipeline — turn a recorded candidate work session into an interleaved, text-only, redacted multimodal package and a structured, evidence-cited Claude assessment. The packager + the assessment ARE the work; capture is a swappable edge."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Alex Harrison" }]
keywords = ["claude", "anthropic", "work-observation", "assessment", "multimodal", "redaction"]

# Core runtime. The packager + assessment need only the schema validator; the
# privacy reuse pulls fb-assist (local path; NOT auto-installed to avoid
# re-resolving its heavy NER deps over a metered link — see __init__ bootstrap).
dependencies = [
    "jsonschema>=4",
    # fb-assist  (local sibling; resolved on sys.path by the package bootstrap)
]

[project.optional-dependencies]
# Typed models (the schemas are the formal contract; pydantic is optional sugar).
models = ["pydantic>=2"]
# The swappable edge — ASR reuse. faster-whisper is an EDGE dep (downloads a
# model on first use); the core/demo never needs it (the fixture ships a
# transcript).
edge = ["faster-whisper"]
dev = ["pytest>=8"]
all = ["pps-pipeline[models,edge,dev]"]

[project.scripts]
pps = "pps_pipeline.cli:main"

[tool.setuptools]
packages = ["pps_pipeline", "pps_pipeline.capture"]

[tool.setuptools.package-data]
pps_pipeline = ["schema/*.json", "prompts/*.md", "prompts/mock/*.json", "capture/*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
